--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "tailwindcss": "^3.4.9",
     "postcss": "^8.4.41",
     "autoprefixer": "^10.4.20"
